fixing payment form spacing

--- a/app/assets/sass/main/layout.sass
+++ b/app/assets/sass/main/layout.sass
@@ -145,6 +145,9 @@ nav.filter
 					padding-top: 4px
 				dd
 					max-width: 560px
+					
+			.payment input
+				margin-bottom: $margin
 
 	.side
 		.label
@@ -199,6 +202,9 @@ nav.filter
 					+font(1.6, "mono")
 					margin: $margin / 2 0
 					
+			h3
+				margin-top: 0
+				
 			.image
 				opacity: 0.3
 				z-index: -1
